Add a bunch of new stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,63 @@
-# Use Vim shortcuts
-setw -g mode-keys vi
 
-# Make `Ctrl+B R` reload the config file
-unbind r
+# ------------------------
+# Defaults
+# ------------------------
+
+set-option -g default-shell /usr/bin/zsh
+
+# Start windows and panes at 1
+set -g base-index 1
+set-window-option -gq -g pane-base-index 1
+
+# renumber all windows when any window was closed
+set -g renumber-windows on
+
+# Increase history scrollback limit
+set -g history-limit 50000
+
+# Increase time Tmux messages are displayed
+set -g display-time 4000
+
+# Refresh status more often
+set -g status-interval 5
+
+# Aggressively resize when using multiple monitors
+set-window-option -gq -g aggressive-resize on
+
+# Pane Navigation
+set -g mouse on # I know, I know. It's just for quick scrolling.
+#set -g mouse-resize-pane on # resizing with mouse
+
+set-window-option -gq -g mode-keys vi
+
+# Place the bar on the top:
+set-option -g status-position top
+
+# Copy selection to system clipboard
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+
+# ------------------------
+# Keybindings
+# ------------------------
+
+# Reload config file
 bind r source-file ~/.tmux.conf
+
+# Resize panes
+bind -r k resize-pane -U 5
+bind -r h resize-pane -L 5
+bind -r j resize-pane -D 5
+bind -r l resize-pane -R 5
+
+
+#---------------------------
+# Display Popups
+#---------------------------
+bind C-t display-popup -d "#{pane_current_path}" -E "zsh"
+bind C-f display-popup \
+  -d "#{pane_current_path}" \
+  -w 90% \
+  -h 90% \
+  -E "yazi"
+
+run-shell "~/.config/tmux/themes/nord-tmux/nord.tmux"
